fixed navbar z-index

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ a:hover {
     left: 0;
     width: 100%;
     background-color: salmon;
-    /* z-index: 0; */
+    z-index: 1;
 }
 
 .navlist {
